Add responsiveness and a input field for creating a particular new list

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,10 +3,11 @@
 <footer>
     <p>Copyright 2023 Ronit <sup>&copy;</sup> </p>
     
-    <a href="https://www.github.com/ronitsharma03" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/ronit-khajuria-394609228" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
-    <a href="https://www.twitter.com/btwitsronit" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
-    <a href="https://www.instagram.com/just_ronit__" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+    <a href="https://www.github.com/ronitsharma03" target="_blank"><i id="github" class="fa-brands fa-github fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/ronit-khajuria-394609228" target="_blank"><i id="linkedin" class="fa-brands fa-linkedin fa-2x"></i></a>
+    <a href="https://www.twitter.com/btwitsronit" target="_blank"><i id="twitter" class="fa-brands fa-twitter fa-2x"></i></a>
+    <a href="https://www.instagram.com/just_ronit__" target="_blank"><i id="insta" class="fa-brands fa-instagram fa-2x"></i></a>
 
+    <script src="css/script.js"></script>
 </footer>
 </html>
