--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,132 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis&family=PT+Sans');
-html {
+html,body {
   background-color: #E4E9FD;
   background-image: -webkit-linear-gradient(65deg, #ff9d73 50%, #ffe8d1 50%);
+  background-repeat: no-repeat;
   min-height: 1000px;
   font-family: 'PT Sans', sans-serif;
+  margin: 0;
+}
+
+.nav-bar{
+  background-color: #ff9264;
+  padding: 25px
+
+}
+.nav-bar ul{
+  list-style: none;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+.nav-bar ul li{
+  cursor: pointer;
+  color: #fff;
+  margin-left: 30px;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+.mobile-nav{
+  background-color: #ff9264;
+  padding: 20px 0 6px 0;
+  position: fixed;
+  width: 100%;
+  right: 100%;
+  top: 0;
+  margin-top: 30px;
+}
+
+.mobile-nav ul{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  list-style: none;
+  margin-left: 20px;
+}
+.mobile-nav ul li{
+  color: white;
+  margin-top: 10px;
+  font-size: 1.1rem;
+}
+.list-input-1{
+  width: 150px;
+  height: 20px;
+  padding-left: 3px;
+  font-size: 0.8rem;
+  border-radius: 5px;
+  border: 1px solid white;
+}
+.btn-2{
+  height: 20px;
+  width: 50px;
+  margin-left: 7px;
+  font-size: 0.8rem;
+  font-weight: 100;
+  color: #303030;
+  border-radius: 5px;
+  border: 1px solid white;
+}
+.newroute-form-1{
+  margin: 0;
+  margin-top: 10px;
+}
+.list-input{
+  width: 180px;
+  height: 30px;
+  padding-left: 5px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  border: 1px solid white;
+}
+.btn-1{
+  height: 30px;
+  width: 60px;
+  margin-left: 10px;
+  font-size: 0.9rem;
+  font-weight: 100;
+  color: #303030;
+  border-radius: 5px;
+  border: 1px solid white;
+
+}
+
+.hamburger{
+  outline: none;
+  border: none;
+  appearance: none;
+  background: none;
+
+  position: relative;
+  z-index: 2;
+  display: block;
+  width: 40px;
+  cursor: pointer;
+}
+
+.hamburger .bar, .hamburger:after, .hamburger:before{
+  content:'';
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+  margin: 5px 0;
+  transition: 0.2s;
+}
+.hamburger.is-active:before{
+  transform: rotate(-45deg) translate(-6px, 5px);
+}
+.hamburger.is-active:after{
+  transform: rotate(45deg) translate(-7px, -7px);
+}
+.hamburger.is-active .bar{
+  opacity: 0;
+}
+.mobile-nav.is-active{
+  right: 0;
+  transition: 0.5s ease;
 }
 
 h1 {
@@ -59,7 +182,7 @@ form {
   align-items: center;
 }
 
-button {
+.btn {
   min-height: 45px;
   width: 45px;
   border-radius: 50%;
@@ -71,7 +194,7 @@ button {
   font-weight: bold;
 }
 
-input[type="text"] {
+.item-input {
   text-align: center;
   height: 55px;
   top: 10px;
@@ -109,3 +232,98 @@ footer a i{
   margin-right: 10px;
   margin-top: 5px;
 }
+
+@media only screen and (max-width: 770px){
+  .nav-items{
+    display: none;
+  }
+
+  h1 {
+    color: #fff;
+    padding: 5px;
+  }
+  
+  .box {
+    max-width: 350px;
+    margin: 40px auto;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+  }
+
+  .item {
+    min-height: 50px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #F1F1F1;
+  }
+
+  input[type="checkbox"] {
+    margin: 10px;
+  }
+  
+  p {
+    margin: 0;
+    padding: 10px;
+    font-size: 17px;
+    font-weight:100;
+    color: #030303;
+  }
+
+  
+  .btn {
+    min-height: 33px;
+    width: 33px;
+    border-radius: 50%;
+    border-color: transparent;
+    background-color: #ff7439;
+    color: #fff;
+    font-size: 23px;
+    border-width: 0;
+    font-weight: 500;
+    margin-right: 10px;
+  }
+  
+  .item-input {
+    text-align: center;
+    height: 45px;
+    top: 10px;
+    border: none;
+    background: transparent;
+    font-size: 16px;
+    font-weight: 100;
+    width: 300px;
+    margin-bottom: 3px;
+  }
+
+  footer {
+    color: white;
+    color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+  }
+  
+  footer p{
+    font-size: 0.7rem;
+    color: #252525;
+  }
+  footer a i{
+    color: #252525;
+    margin-left:5px;
+    margin-right: 5px;
+    margin-top: 2px;
+  }
+
+
+}
+
+@media only screen and (min-width: 770px){
+  .hamburger{
+    display: none;
+  }
+  .mobile-nav{
+    display: none;
+  }
+}
+
+
+
